--- a/WeatherApp.ui
+++ b/WeatherApp.ui
@@ -27,23 +27,55 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="mainLayout">
+    <property name="spacing">
+     <number>20</number>
+    </property>
+    <property name="sizeConstraint">
+     <enum>QLayout::SetDefaultConstraint</enum>
+    </property>
+    <property name="leftMargin">
+     <number>30</number>
+    </property>
+    <property name="topMargin">
+     <number>30</number>
+    </property>
+    <property name="rightMargin">
+     <number>30</number>
+    </property>
+    <property name="bottomMargin">
+     <number>30</number>
+    </property>
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>GroupBox</string>
+       <string>Info Input</string>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,5,2">
-       <item>
+      <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0" columnstretch="1,1,1,1">
+       <property name="spacing">
+        <number>8</number>
+       </property>
+       <item row="1" column="0">
         <widget class="QLabel" name="CityLabel">
          <property name="styleSheet">
-          <string notr="true">font: 12pt &quot;Montserrat&quot;;</string>
+          <string notr="true">font: 18pt &quot;Montserrat&quot;;</string>
          </property>
          <property name="text">
           <string>Please input your city:</string>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QLabel" name="CityErrLabel">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 0, 0);
+font: 18pt &quot;Montserrat&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Please enter a valid city</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="3">
         <widget class="QLineEdit" name="CityEdit">
          <property name="styleSheet">
           <string notr="true">font: 12pt &quot;Montserrat&quot;;</string>
@@ -53,13 +85,13 @@
          </property>
         </widget>
        </item>
-       <item>
+       <item row="4" column="2">
         <widget class="QPushButton" name="SearchButton">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="text">
-          <string>PushButton</string>
+          <string>SEARCH</string>
          </property>
         </widget>
        </item>
@@ -67,54 +99,58 @@
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QGroupBox" name="ExtraGroupBox">
-          <property name="title">
-           <string>Additional Info</string>
-          </property>
-          <layout class="QVBoxLayout" name="groupBoxLayout">
-           <item>
-            <widget class="QLabel" name="CityREsLabel">
-             <property name="text">
-              <string>Krakow</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="DegResLabel">
-             <property name="text">
-              <string>24deg</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="QLabel" name="ImgBigResLabel">
-        <property name="text">
-         <string>img</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="title">
+       <string>Current temp</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="2" column="0" rowspan="2">
+        <widget class="QLabel" name="TempDispLabel">
+         <property name="styleSheet">
+          <string notr="true">font: 30pt &quot;Montserrat&quot;;</string>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" rowspan="2">
+        <widget class="QLabel" name="CityDispLabel">
+         <property name="styleSheet">
+          <string notr="true">font: 30pt &quot;Montserrat&quot;;</string>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2" rowspan="4" alignment="Qt::AlignRight">
+        <widget class="QLabel" name="WeatherImg">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="title">
-       <string>Today's forecast</string>
+       <string>maybe wind</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="title">
-       <string>Air conditions</string>
+       <string>future forecast</string>
       </property>
      </widget>
     </item>
